# yngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: move_generation.cpp
tests/: CMakeLists.txt  playouts.cpp
yngine/: CMakeLists.txt  allocators.cpp  allocators.hpp  bitboard.cpp  bitboard.hpp  board_state.cpp  board_state.hpp  common.hpp  generate_tables.cpp  mcts.cpp  mcts.hpp  moves.cpp  moves.hpp
